--- a/7.1
+++ b/7.1
@@ -16,7 +16,8 @@
     -> _blank 사용시 title에 꼭!! 설명 첨부 -> 접근성
       (title="~~~ 사이트가 새창에 열림")
   - 상속 시 font-color, text-decoration 영향 받지않는다
-  
+  - 파일 열기 / 다운로드도 가능
+  - 페이지 내 점프메뉴 (id로 목적지 설정)
   
   
 가상 클래스
@@ -26,7 +27,12 @@
   hover:      => 현재 마우스 포인터 등으로 가리켜지고 있을때(롤오버)
   active:     => 현재 클릭되고 있을때
   focus       => 포커스를 받을때
-
+  
+  download => 브라우저가 처리할 수 없는 파일의 종류를 href=""링크로
+              연결할 때
+  
+  강제로 모든 파일을 다운로드 => download="저장할 파일명"
+              
 
 
 
