--- a/7.1
+++ b/7.1
@@ -97,10 +97,14 @@ ul  (Unorder List)
     </ul>
 
 -------------------------------------------------------------------
+UX / UI 
 
 
+UX를 정의하기보다는 관점을 넓히기
 
+시선의 흐름 고려하기 (좌상단 -> 우하단)
 
+표준 고려하기
 
 
 
