--- a/7.1
+++ b/7.1
@@ -106,7 +106,9 @@ UX를 정의하기보다는 관점을 넓히기
 
 표준 고려하기
 
+-------------------------------------------------------------------
 
+카페 - 디자인과 컬러 - 4page - 스큐어모피즘 & 플랫디자인
 
 
 
