--- a/7.1
+++ b/7.1
@@ -111,8 +111,32 @@ UX를 정의하기보다는 관점을 넓히기
 카페 - 디자인과 컬러 - 4page - 스큐어모피즘 & 플랫디자인
 
 
+카페 - 질문답변게시판 - 주제 선정/구상 방법 게시글 확인
 
+프로젝트(기업형)
+사이트 만들 기업 3개 찾기
 
+후보 생각해보자...
+
+한솔케미칼
+대한골프협회
+이건창호
+
+예시
+1. 주제 : 대한항공
+  - url -> http://~~~
+  - 사이트 분석(니즈분석/단점)
+    -
+    -
+    -
+    
+2. 주제 : ~~~~
+  - url -> http://~~~
+  - 사이트 분석(니즈분석/단점)
+    -
+    -
+    -
+  
 
 
 
