--- a/7.4
+++ b/7.4
@@ -103,6 +103,18 @@ ol (Order List)
   *line-height:값;  (모든 숫자 가능 => 줄간격)
   
   
+------------------------------------------------------------------------
+
+
+포트폴리오 관련
+
+스토리보드 제작용 노트 필요
+  - 디자인 시안용
+  - 구상 내용 정리
+  - 디자인 시안 정리    
+  - 페이퍼 프로토타입 제작
+
+
 
 
 
