--- a/7.5
+++ b/7.5
@@ -53,6 +53,77 @@
 --------------------------------------------------------------------------------
 
 
+박스모델 (margin / padding)
+
+ 모든 태그의 여백(마진, 패딩) 초기화
+  * { margin:0; padding:0; }    
+    0은 단위를 가질 수 없음
+    
+
+  margin
+    => 위/오른쪽/아래/왼쪽의 박스 바깥 여백
+    
+    margin: 30px 50px 40px 20px; -> 각각 여백주기
+    margin: 30px 50px 40px; -> 왼,오른쪽 둘다 50px
+    margin: 30px 50px; 위아래 30px, 좌우 50px
+    margin: 30px; 전부다 30px
+    
+  *더블마진 상하병합
+    => margin-bottom / margin-top => 큰 값이 적용됨 (큰 쪽으로 병합됨)
+    
+  *더블마진 좌우합산
+    => margin-left / margin-right => 둘 다 적용됨 (합산됨)
+  
+  
+      
+  padding
+    => 위/오른쪽/아래/왼쪽의 박스 안쪽 여백
+    
+    마진과 안쪽 여백 주는 방법은 동일함
+    
+    
+  ** padding + width + border => 모두 합산된다
+    
+    ex) border : 1px, padding : 30px, width:400px
+        --> 총 너비 462px
+        --> 총 너비를 400px으로 계산해놨다면 width를 338px으로 조정하기
+  
+  
+  블럭요소에서 잘먹힘 --> 블럭요소의 특징
+  
+  인라인요소에서는 마진,패딩이 잘 안먹음(span)
+  --> 강제로 인라인요소를 블럭요소로 바꾸는 방법 : display 속성 사용
+  
+  ***
+  display : block; --> 블럭요소로 변경
+  display : inline; --> 인라인요소로 변경
+  
+  
+
+--------------------------------------------------------------------------------
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
