--- a/7.5
+++ b/7.5
@@ -147,6 +147,53 @@
     
 
 
+--------------------------------------------------------------------------------
+
+오후 : 포트폴리오 시안 작업
+  
+  
+1. 기업형 웹 프로젝트
+  1) 제목 : 한솔케미칼
+  2) 사이트 분석 (니즈분석)
+    - XHTML 1.0 으로 제작
+    - 올드한 디자인
+    - 점프메뉴 부재
+    - W3C 마크업검사 결과 다수의 에러
+    - 텍스트의 불필요한 이미지처리
+    .   
+    .
+    .
+    .
+    
+    메모용
+    - url -> https://www.hansolchemical.com/main.do
+    - 올드한 디자인
+    - XHtml1.0 사용
+    - 1depth 6 / 2depth 2~6 
+    - 윤리경영 / 40년사 : 다른 페이지url로 이동되어 접근성이 아쉬움
+    - W3C 마크업검사 결과 다수의 에러 발견됨 (메인페이지 기준 10에러, 5경
+    - 점프메뉴 부재로 인한 불편함
+    - 이미지 alt속성에 자세한설명 부재
+  
+  3) 기획의도
+  4) 마인드맵
+    카페 - 디자인과 컬러 
+      3page - 브레인스토밍 참조
+      2page - 마인드 맵 참조
+    
+  5) Color
+    - 메인컬러
+    - 서브컬러
+    - 포인트컬러 (1~2개)
+    - 텍스트(폰트)컬러
+  
+    배경색 : 흰색 #fff 사용 추천!
+    
+    텍스트(폰트)컬러 : 검정색 사용 금지 #000
+                      짙은 회색 #333 사용추천!
+    
+    
+    
 
 
 
