--- a/7.5
+++ b/7.5
@@ -177,7 +177,8 @@
   
   3) 기획의도
   4) 마인드맵
-    카페 - 디자인과 컬러 
+    - 키워드 4개 도출하기
+    - 카페 - 디자인과 컬러 
       3page - 브레인스토밍 참조
       2page - 마인드 맵 참조
     
@@ -190,10 +191,44 @@
     배경색 : 흰색 #fff 사용 추천!
     
     텍스트(폰트)컬러 : 검정색 사용 금지 #000
-                      짙은 회색 #333 사용추천!
+                      채도낮은 회색 #333 사용추천!
+                              그 다음 (#666, #999)
+                      #454648 사이트 로고 글자색
+                              
+    
+    서브컬러 : 무채색(회색) 사용!
+              #f8f8f8 사용 추천
+    
+    메인컬러 : #a181f1 페이지 연보라색
+              #1469aa 로고 파란색
+              #007DC5
+              
+              #1d8b42 로고 초록색
+              #00A651
+              
+              
+              중에서 골라야 할 듯
     
     
+    포인트컬러 
+              #1469aa 로고 파란색
+                 #007DC5
+                 
+              #1d8b42 로고 초록색
+              #00A651
+              
+              #595856 로고 글자색
+              #565759
+              #a181f1 페이지 연보라색
+              
+
+  6) 폰트
+    카페 - 디자인과 컬러 - 4page - 세리프, 산세리프
     
+  세리프 (명조체)
+  
+  
+
 
 
 
