--- a/7.5
+++ b/7.5
@@ -200,33 +200,61 @@
               #f8f8f8 사용 추천
     
     메인컬러 : #a181f1 페이지 연보라색
-              #1469aa 로고 파란색
-              #007DC5
               
-              #1d8b42 로고 초록색
-              #00A651
+              #007DC5 로고 파란색
+              #00A651 로고 초록색
               
               
               중에서 골라야 할 듯
     
     
     포인트컬러 
-              #1469aa 로고 파란색
-                 #007DC5
-                 
-              #1d8b42 로고 초록색
-              #00A651
+              #007DC5 로고 파란색
+              #00A651 로고 초록색
               
-              #595856 로고 글자색
-              #565759
+              #565759 로고 글자색
+              
               #a181f1 페이지 연보라색
               
 
   6) 폰트
-    카페 - 디자인과 컬러 - 4page - 세리프, 산세리프
+    카페 - 디자인과 컬러 - 4page - 세리프, 산세리프 참조
     
-  세리프 (명조체)
-  
+    
+    - 세리프 : 획의 일부 끝이 돌출된 형태 (가독성을 약간 높인다)
+              (궁서체)
+    - 산세리프 : 세리프(돌출된부분)이 없는 형태 (고딕체, 굴림체) 
+                -> 웹 기본 폰트
+            * 웹에서 주로 사용하는 서체
+              빛으로 표현하기때문에, 그림자가 최대한 덜 지는 폰트를 사용
+    - 스크립트체 : 감성적, 아날로그, 가독성이 떨어짐    
+    
+    
+  - 헤드라인 : 제목 h1~ h6 / 네비게이션(GNB)
+    - 영문
+        - Arial (시스템폰트, 그냥사용가능)
+        
+        - Helvetica (라이센스 있어야함)
+        - Univers (라이센스)
+        - DIN (라이센스)
+        - futura (라이센스)
+        - Frutiger, metaplus (라이센스)
+        
+
+    - 한글
+        - 윤고딕/윤명조 (라이센스)
+        - 산돌고딕/산돌명조 (라이센스)
+        - rix 릭스고딕/명조 (라이센스)
+        - 맑은고딕 (시스템)
+        
+        - 나눔고딕/명조 => (강추)
+        - 다음체
+
+
+  - 본문(글/내용)      
+    - 돋움(시스템폰트)
+    
+      
   
 
 
