--- a/7.6
+++ b/7.6
@@ -41,6 +41,8 @@
     
     
 --->여기서부터 오늘
+
+    배경의 이미지는, padding의 영향을 받지 않는다
     
     그 밖의 위치설정
     background-position: 50px 100px; / 50% 50%; == center;
@@ -48,12 +50,22 @@
     축약법
     background: url(/images/center.jpg) right bottom no-repeat ;
                 왠만하면 순서 맞추자!
+  
+    
+    배경색을 추가하려면
+    background: #00f url(/images/center.jpg) right bottom no-repeat ;
+               (배경색)
+
+    배경 이미지 스크롤내려도 고정시키기 : fixed
+    
+    background-attachment: fixed; 배경의 고정
 
 
 
+--------------------------------------------------------------------------------
 
 
-
+레이아웃
 
 
 
