--- a/7.6
+++ b/7.6
@@ -65,8 +65,14 @@
 --------------------------------------------------------------------------------
 
 
-레이아웃
+레이아웃 (->정렬 방식)
 
+  - block요소들은 기본 정렬방식이 수직/상하 정렬 방식을 취하고 있음
+    이 블럭요소들의 정렬을 강제로 수평/좌우 정렬로 바꿀 경우가 있다
+  
+  - 강제단 만드는 방법
+  
+  
 
 
 
