--- a/7.6
+++ b/7.6
@@ -71,9 +71,20 @@
     이 블럭요소들의 정렬을 강제로 수평/좌우 정렬로 바꿀 경우가 있다
   
   - 강제단 만드는 방법
-  
-  
-
+    
+    1) float : left / right ;
+      
+        => 문제점 : float을 사용한 요소의 직계 부모요소에 발생
+                    (부모요소가 자식요소를 감싸지 못하는 문제)
+        => 해결방법
+          1. 부모태그에 overflow: hidden 사용 (최선책)          
+          2. 1을 쓸 수 없는 경우, 부모태그에 float: left 사용 (차선책)
+    
+    2) clear : both ;
+        
+        - 강제단의 공간을 사용하지 않는다(공간 해제/취소)
+    
+    * clear와 float은 상반된다 --> 같이 사용 할 수 없음
 
 
 
