--- a/7.6
+++ b/7.6
@@ -76,15 +76,32 @@
       
         => 문제점 : float을 사용한 요소의 직계 부모요소에 발생
                     (부모요소가 자식요소를 감싸지 못하는 문제)
-        => 해결방법
-          1. 부모태그에 overflow: hidden 사용 (최선책)          
-          2. 1을 쓸 수 없는 경우, 부모태그에 float: left 사용 (차선책)
+          - 해결방법
+            1. 부모태그에 overflow: hidden 사용 (최선책)          
+            2. 1을 쓸 수 없는 경우, 부모태그에 float: left 사용 (차선책)
+          
+        
+        => 문제점 : float을 사용하는/강제 단을 적용해야하는 요소에 width값(px/%)이 있으면
+                    (float이 제대로 안 됨)
+        
+          - 해결방법
+            - 좌측단과 우측단에 위치하는 모든 요소에 float을 적용한다.
+        
     
     2) clear : both ;
         
         - 강제단의 공간을 사용하지 않는다(공간 해제/취소)
     
     * clear와 float은 상반된다 --> 같이 사용 할 수 없음
+    
+    
+    3) <div> 등 블럭요소를 추가
+        
+        - div로 감싸기
+        
+        - ul li 로 감싸기
+      
+.
 
 
 
