--- a/7.6
+++ b/7.6
@@ -96,11 +96,11 @@
     
     
     3) <div> 등 블럭요소를 추가
+        - ul li 로 감싸기
         
         - div로 감싸기
-        
-        - ul li 로 감싸기
-      
+          무조건 1:1 (1:1 / 1:多 / 多:1 / 多:多) 구조를 만들기
+          
 .
 
 
