--- a/7.6
+++ b/7.6
@@ -100,8 +100,21 @@
         
         - div로 감싸기
           무조건 1:1 (1:1 / 1:多 / 多:1 / 多:多) 구조를 만들기
-          
+
+카페 - Web 수업자료 - page4 - 웹표준&접근성 자료2 다운 (pw : 401)
+  -> 내일 할거임
+
+  overflow 속성    
+    - visible : 부모보다 자식요소의 크기가 커도 다 보여줌 (기본)
+    - hidden : 넘어간 부분은 자름
+    - scroll : 넘어간 부분 스크롤로 볼 수 있음 (비추천 : 가로스크롤 생성 때문)
+    - auto : 자동으로 조절해줌
+
+  overflow-y : scroll 
+    - y축만 스크롤
 .
+
+
 
 
 
