--- a/7.6
+++ b/7.6
@@ -115,11 +115,138 @@
 .
 
 
+----------------------------------------------------------------------------------
+
+
+오후 : 포트폴리오 시안 작업 
+  어제에 이어서.
+  
+  
+1. 기업형 웹 프로젝트
+  1) 제목 : 한솔케미칼
+  2) 사이트 분석 (니즈분석)
+    - XHTML 1.0 으로 제작
+    - 올드한 디자인
+    - 점프메뉴 부재
+    - W3C 마크업검사 결과 다수의 에러
+    - 텍스트의 불필요한 이미지처리
+    .   
+    .
+    .
+    .
+    
+    메모용
+    - url -> https://www.hansolchemical.com/main.do
+    - 올드한 디자인
+    - XHtml1.0 사용
+    - 1depth 6 / 2depth 2~6 
+    - 윤리경영 / 40년사 : 다른 페이지url로 이동되어 접근성이 아쉬움
+    - W3C 마크업검사 결과 다수의 에러 발견됨 (메인페이지 기준 10에러, 5경
+    - 점프메뉴 부재로 인한 불편함
+    - 이미지 alt속성에 자세한설명 부재
+  
+  3) 기획의도
+  4) 마인드맵
+    - 키워드 4개 도출하기
+    - 카페 - 디자인과 컬러 
+      3page - 브레인스토밍 참조
+      2page - 마인드 맵 참조
+    
+  5) Color
+    - 메인컬러
+    - 서브컬러
+    - 포인트컬러 (1~2개)
+    - 텍스트(폰트)컬러
+  
+    배경색 : 흰색 #fff 사용 추천!
+    
+    텍스트(폰트)컬러 : 검정색 사용 금지 #000
+                      채도낮은 회색 #333 사용추천!
+                              그 다음 (#666, #999)
+                      #454648 사이트 로고 글자색
+                              
+    
+    서브컬러 : 무채색(회색) 사용!
+              #f8f8f8 사용 추천
+    
+    메인컬러 : #a181f1 페이지 연보라색
+              
+              #007DC5 로고 파란색
+              #00A651 로고 초록색
+              
+              
+              중에서 골라야 할 듯
+    
+    
+    포인트컬러 
+              #007DC5 로고 파란색
+              #00A651 로고 초록색
+              
+              #565759 로고 글자색
+              
+              #a181f1 페이지 연보라색
+              
+
+  6) 폰트
+    카페 - 디자인과 컬러 - 4page - 세리프, 산세리프 참조
+    
+    
+    - 세리프 : 획의 일부 끝이 돌출된 형태 (가독성을 약간 높인다)
+              (궁서체)
+    - 산세리프 : 세리프(돌출된부분)이 없는 형태 (고딕체, 굴림체) 
+                -> 웹 기본 폰트
+            * 웹에서 주로 사용하는 서체
+              빛으로 표현하기때문에, 그림자가 최대한 덜 지는 폰트를 사용
+    - 스크립트체 : 감성적, 아날로그, 가독성이 떨어짐    
+    
+    
+  - 헤드라인 : 제목 h1~ h6 / 네비게이션(GNB)
+    - 영문
+        - Arial (시스템폰트, 그냥사용가능)
+        
+        - Helvetica (라이센스 있어야함)
+        - Univers (라이센스)
+        - DIN (라이센스)
+        - futura (라이센스)
+        - Frutiger, metaplus (라이센스)
+        
+
+    - 한글
+        - 윤고딕/윤명조 (라이센스)
+        - 산돌고딕/산돌명조 (라이센스)
+        - rix 릭스고딕/명조 (라이센스)
+        - 맑은고딕 (시스템)
+        
+        - 나눔고딕/명조 => (강추)
+        - 다음체
+
+
+  - 본문(글/내용)      
+    - 돋움(시스템폰트)
+    
+  
+  7) 사이트맵 (IA) Information Architecture - GNB
+    
+    - 1 Depth 5~6
+    
+      - 2 Depth 각각 2~4/5개
+    
+    
+    - 공통 (웹개발)
+      
+      - 상단 top 메뉴 (로그인/회원가입)
+        - 회원약관/회원가입/회원정보수정/로그인/아이디&패스워드찾기
+      
+      - 게시판 (2~3개)
+        - 공지사항(notice) -> 필수
+        - 이벤트/뉴스/소식(채용공고) -> 갤러리 게시판
+        - 상품 게시판 -> 메인에서 상품 검색 서비스
+        
+  
 
 
 
-
-
+.
 
 
 
