--- a/7.6
+++ b/7.6
@@ -243,7 +243,20 @@
         - 상품 게시판 -> 메인에서 상품 검색 서비스
         
   
+카페 - Mobie WEB(TIP) - 웹 제작 => 프로토타입    참조
 
+
+
+  최대한 많은 내용을 보여줄 수 있는 인덱스페이지 만들 것
+
+헤더 / 푸터
+
+
+본문
+  5개정도의 컨텐츠
+    사이트 내 중요하다고 생각되는 컨텐츠를 선택하기
+    
+    
 
 
 .
