--- a/7.7
+++ b/7.7
@@ -11,11 +11,30 @@ C:\minseung\html 폴더 열기 Ctrl K O
 네비게이션 : 띄어쓰기 잘 안씀
 
 css
-  1. 여백을 없애기 (리셋코드)
+  1. 리셋코드 설정
+      
+* { margin: 0; padding: 0; }
+body { font-family: '돋움'; color: #333; font-size: 14px; }
+ul { list-style: none; }
+a { color: #333; text-decoration: none; }
 
 
+  2. 레이아웃 잡기 (div 나누기)
+    
+    5개 레이아웃 - 메인, 헤더, 네비게이션, 콘텐츠, 푸터
+    
+    float:left 
+    overflow:hidden
+    clear:both
+    
+    
+  3. 디테일하게 css설정
+  
 
-
+    
+     
+    
+    
 
 
 
