--- a/7.7
+++ b/7.7
@@ -31,7 +31,9 @@ a { color: #333; text-decoration: none; }
   3. 디테일하게 css설정
   
 
-    
+------------------------------------------------------------------------------------------------------------
+
+3단 고정 레이아웃(px) 도 해보기
      
     
     
