--- a/7.7
+++ b/7.7
@@ -6,11 +6,13 @@
 
 C:\minseung\html 폴더 열기 Ctrl K O
 
+
+
+
 2단레이아웃 폴더 내 한국의 맛 집 만들어보기
 
 네비게이션 : 띄어쓰기 잘 안씀
 
-css
   1. 리셋코드 설정
       
 * { margin: 0; padding: 0; }
@@ -31,28 +33,62 @@ a { color: #333; text-decoration: none; }
   3. 디테일하게 css설정
   
 
-------------------------------------------------------------------------------------------------------------
-
 3단 고정 레이아웃(px) 도 해보기
 
 
 
+-------------------------------------------------------------------------------
 
 
+포트폴리오 시안
 
 
+헤더
+  전체적으로 수정하기
+  검색기능->헤더로 이동
+  
+비주얼
+    
+컨텐츠
+
+  2개 더 추가하기
+
+푸터
 
 
+-------------------------------------------------------------------------------
 
 
+폰트 정하기
+  
+  
+  
+  본문
+      돋움
+      
+  
+  폰트다운로드
+    https://fonts.google.com/
+  
+  
+  헤더 
+      한글 : 나눔고딕
+             Noto Sans Kr
+      
+      영문 :  Roboto(추천)
+              Arial(시스템)
+              Lato
+              Open Sans
 
+  다운로드하기
+  .otf, .ttf 파일을  
+  C:\Windows\Fonts  에다가 이동/복사 해서 폰트 추가!
+  
 
+-------------------------------------------------------------------------------
 
-
-
-
-
-
+<기업형>
+  
 
 
 
