--- a/7.7
+++ b/7.7
@@ -88,7 +88,30 @@ a { color: #333; text-decoration: none; }
 -------------------------------------------------------------------------------
 
 <기업형>
+ 
+  width 1200(추천) ~ 1400
+
+  기본폰트 (내용 / 글) -> 16px(권장) / 14px
+
+  글자색상 -> #333(기본) / #666 / #999
+
+  해상도 -> 72pi
+
+  단위 -> px
+
+  참고사이트 (이미지 / 아이콘)  ->  카페-디자인과컬러-이미지 디자인 참고 사이트
   
+      이미지
+        - https://www.pinterest.co.kr/
+        - https://pixabay.com
+        - www.unsplash.com  
+
+      아이콘
+        - https://www.flaticon.com/
+        
+
+
+
 
 
 
