--- a/7.7
+++ b/7.7
@@ -109,7 +109,11 @@ a { color: #333; text-decoration: none; }
       아이콘
         - https://www.flaticon.com/
         
-
+  비주얼 높이 -> 960px ~ 1000px
+  
+  기업형_index_초안1_성민승.psd로 제출하기
+  
+  
 
 
 
